fix: fix banner spaces change z-index

--- a/src/scss/components/boxes.scss
+++ b/src/scss/components/boxes.scss
@@ -662,6 +662,7 @@
 		visibility: visible;
 		opacity: 1;
 		transform: scale(1);
+		z-index: auto;
 	}
 }
 
